<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="osirisc.coastappli.ui.map.MapFragment"
        android:label="@string/menu_carte"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_history"
        android:name="osirisc.coastappli.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_badges"
        android:name="osirisc.coastappli.ui.badges.BadgesFragment"
        android:label="@string/menu_badges"
        tools:layout="@layout/fragment_badges" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="osirisc.coastappli.ui.manage.ManageFragment"
        android:label="@string/menu_manage"
        tools:layout="@layout/fragment_manage" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="osirisc.coastappli.ui.log_out.LogOutFragment"
        android:label="@string/menu_log_in"
        tools:layout="@layout/fragment_log_out" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="osirisc.coastappli.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>