<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/methodDistanceMeasureTitle"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureGoalTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceMeasureGoalMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureGoalMessage"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureHowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureHowTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceMeasureHowMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureHowMessage"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureWhenTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:text="@string/methodDistanceMeasureWhenTitle"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textViewMethodDistanceMeasureWhenMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureWhenMessage"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureMetre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureMetre"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureMetreExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureMetreExplanation"
                android:paddingBottom="10dp"/>



            <TextView
                android:id="@+id/textViewMethodDistanceMeasureStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureStep"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureStepExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/methodDistanceMeasureStepExplanation" />

            <ImageView
                android:id="@+id/imageMethodDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/distance_example" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>