<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MethodHauteurmeasureTitle"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureGoalTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceMeasureGoalMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Definitionoftheheightmeasure"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureHowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureHowTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceMeasureHowMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodHeightMeasureHowMessage"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureWhenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureWhenTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceMeasureWhenMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureWhenMessage"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureMetre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureMetre"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureMetreExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceMeasureMetreExplanation"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/imageViewMethodPhoto2"
                android:layout_width="393dp"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/height2" />

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodHeightMeasureStep"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistanceMeasureStepExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HeightMeasureExplanation"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/imageViewMethodPhoto1"
                android:layout_width="367dp"
                android:layout_height="152dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/height1" />

            <ImageView
                android:id="@+id/imageViewSplashScreen"
                android:layout_width="414dp"
                android:layout_height="158dp"
                app:srcCompat="@mipmap/ic_launcher_coast" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>