<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewMethodDistanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/methodDistanceTitle"
                android:textSize="25sp"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textViewMethodDistanceGoalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceGoalTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceGoalMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceGoalMessage"
                android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/textViewMethodDistanceHowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceHowTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceHowMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceHowMessage"
                android:paddingBottom="10dp"/>
            <TextView
                android:id="@+id/textViewMethodDistanceWhenTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceWhenTitle"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textViewMethodDistanceWhenMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistanceWhenMessage"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistance2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistance2"
                android:textStyle="bold"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/imageViewMethodPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_coast" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textViewMethodClue1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/methodClue1" />

                    <TextView
                        android:id="@+id/textViewMethodFillClue1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textViewMethodClue2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/methodClue2" />

                    <TextView
                        android:id="@+id/textViewMethodFillClue2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/textViewMethodClue3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/methodClue3" />

                    <TextView
                        android:id="@+id/textViewMethodFillClue3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/textViewMethodDistance3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistance3"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/imageViewMethodPhotoPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_coast" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imageViewMethodDistance2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/ic_light" />

                <TextView
                    android:id="@+id/textViewMethodDistance4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/methodDistance4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>